attempt to fix scaling on ios

--- a/kornell-gwt/src/main/webapp/less/chat/chat.less
+++ b/kornell-gwt/src/main/webapp/less/chat/chat.less
@@ -307,6 +307,15 @@
 		.threadPanel {
 			width: 98%;
 		}
+		.messageTextArea {
+		    font-size: 16px !important;
+		    line-height: 18px !important;
+		}
+		.filterPanel {
+			input {
+			    font-size: 16px !important;
+			}
+		}
 	}
 }
 
@@ -426,6 +435,13 @@
 				margin: 5px;
 				margin-bottom: 10px;
 			}
+		}
+	}
+}
+@media screen and (max-width: 568px) {
+	.messagesPopup {
+		.textField {
+	    	font-size: 16px !important;
 		}
 	}
 }
