--- a/kornell-gwt/src/main/webapp/less/skin.nocache.less
+++ b/kornell-gwt/src/main/webapp/less/skin.nocache.less
@@ -389,7 +389,13 @@ a:hover{
 		}
 	}
 }
-
+@media screen and (max-width: @wrapperWidth) {
+	.deanHome {
+		.txtSearch{
+			font-size: 16px;
+		}
+    }
+}
 
 
 
