--- a/kornell-gwt/src/main/webapp/less/utils/forms.less
+++ b/kornell-gwt/src/main/webapp/less/utils/forms.less
@@ -184,7 +184,9 @@
 			}	
 		}
 		.fieldPanel{
-
+			.textField{
+    			font-size: 16px;
+			}
 			.selectField{
 
 			}
