--- a/kornell-gwt/src/main/webapp/less/vitrine/vitrine.less
+++ b/kornell-gwt/src/main/webapp/less/vitrine/vitrine.less
@@ -83,7 +83,7 @@
 				padding: 0;
 				border: 0;
 				box-shadow: none;
-				font-size: 12px;
+				font-size: 14px;
 				font-weight: bold;
 			}	
 		}
@@ -126,6 +126,11 @@
     		.boxLogin{
     			margin-left: 7px;
 			    width: 215px;
+			    .inputWrapper {
+			    	input {
+			    		font-size: 16px;
+			    	}
+			    }
     		}
 		}
     }
